changes to site

--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
           </div>
 
           <div class="col-md-4">
-            <div id="vision-pic" class="card border-secondary mb-3" style="max-width: 20rem;">
+            <div id="vision-pic" style="max-width: 20rem;">
 
               <img style="height: 100%; width: 100%; display: block; border: 2px solid rgb(31, 25, 25);"
                 src="assets/images/20191118_191536.jpg" alt="Church image" class="responsive">
@@ -154,7 +154,9 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-            <div id="pastor-pic" class="card border-secondary mb-3" style="max-width: 20rem;">
+            <!-- <div id="pastor-pic" class="card border-secondary mb-3" style="max-width: 20rem;"> -->
+            <div id="pastor-pic" style="max-width: 20rem;">
+
 
               <!-- <img style="height: 100%; width: 100%; display: block; border: 2px solid rgb(31, 25, 25);" -->
               <img style="display: block; border: 2px solid rgb(31, 25, 25);"
