--- a/serve.html
+++ b/serve.html
@@ -110,10 +110,14 @@
     </div>
     <div id="serve-1">
 
-      <div class="container-fluid">
-        <!-- <img src="assets/images/Choir/20191013_214935_resized[2].jpg" alt="" srcset=""> -->
-        <br>
-        <h1 id="serve-h1" style="color: white;margin-left:8px">Join A Ministry</h1>
+      <div class=".container">
+        <div class="row">
+          <div class="col-md-12">
+            <img src="assets/images/Choir/20191013_214935_resized[2].jpg" width="930px"  style="height: 100%;" class="largePic-responsive">
+            
+            <!-- <h1 id="serve-h1" style="color: white;margin-left:8px">Join A Ministry</h1> -->
+          </div>
+        </div>
       </div>
     </div>
 
@@ -147,26 +151,30 @@
             </div>
             <div class="row">
               <div class="col-lg-12">
-                <div class="slideshow-container" >
+                <div class="slideshow-container">
 
                   <div class="mySlides ">
                     <div class="numbertext">1 / 22</div>
-                    <img src="assets/images/Pastor/20180923_130947_2.jpg" style="width:100%;"  class="responsive-slideshow">
+                    <img src="assets/images/Pastor/20180923_130947_2.jpg" style="width:100%;"
+                      class="responsive-slideshow">
                     <div class="text">Pastor & First Lady</div>
                   </div>
                   <div class="mySlides ">
                     <div class="numbertext">2 / 22</div>
-                    <img src="assets/images/Pastor/20180923_131455_2.jpg" style="width:100%;"  class="responsive-slideshow">
+                    <img src="assets/images/Pastor/20180923_131455_2.jpg" style="width:100%;"
+                      class="responsive-slideshow">
                     <div class="text">Pastor & First Lady</div>
                   </div>
                   <div class="mySlides ">
                     <div class="numbertext">3 / 22</div>
-                    <img src="assets/images/Pastor/pastor&firstlady_grandkids.jpg"  style="width:100%;" class="responsive-slideshow">
+                    <img src="assets/images/Pastor/pastor&firstlady_grandkids.jpg" style="width:100%;"
+                      class="responsive-slideshow">
                     <div class="text">Pastor, First Lady & Grand Kids</div>
                   </div>
                   <div class="mySlides ">
                     <div class="numbertext">4 / 22</div>
-                    <img src="assets/images/First Lady/20191006_130059_resized[1]_2.jpg" style="width:100%;" class="responsive-slideshow">
+                    <img src="assets/images/First Lady/20191006_130059_resized[1]_2.jpg" style="width:100%;"
+                      class="responsive-slideshow">
                     <div class="text">First Lady</div>
                   </div>
                   <!-- <div class="mySlides fade">
@@ -176,13 +184,15 @@
                 </div> -->
                   <div class="mySlides ">
                     <div class="numbertext">5 / 22</div>
-                    <img src="assets/images/Deacon Board/deacon_board.jpg" style="width:100%;" class="responsive-slideshow">
+                    <img src="assets/images/Deacon Board/deacon_board.jpg" style="width:100%;"
+                      class="responsive-slideshow">
                     <div class="text">Deacon Board</div>
                   </div>
 
                   <div class="mySlides ">
                     <div class="numbertext">6 / 22</div>
-                    <img src="assets/images/Deaconess Ministry/deaconess.jpg" style="width:100%" class="responsive-slideshow">
+                    <img src="assets/images/Deaconess Ministry/deaconess.jpg" style="width:100%"
+                      class="responsive-slideshow">
                     <div class="text">Deaconess Ministry</div>
                   </div>
 
@@ -190,12 +200,13 @@
                     <div class="numbertext">7 / 22</div>
 
                     <img src="assets/images/Feeding Ministry/feeding_ministry.jpg" alt="" srcset="" style="width:100%"
-                       class="responsive-slideshow">
+                      class="responsive-slideshow">
                     <div class="text">The Feeding Ministry</div>
                   </div>
                   <div class="mySlides ">
                     <div class="numbertext">8 / 22</div>
-                    <img src="assets/images/Feeding Ministry/20191022_123446_2.jpg" style="width:100%;" class="responsive-slideshow">
+                    <img src="assets/images/Feeding Ministry/20191022_123446_2.jpg" style="width:100%;"
+                      class="responsive-slideshow">
                     <div class="text">The Feeding Ministry</div>
                   </div>
                   <div class="mySlides ">
@@ -207,12 +218,14 @@
 
                   <div class="mySlides ">
                     <div class="numbertext">10 / 22</div>
-                    <img src="assets/images/Music Ministry/20191020_124427_2.jpg" style="width:100%;" class="responsive-slideshow">
+                    <img src="assets/images/Music Ministry/20191020_124427_2.jpg" style="width:100%;"
+                      class="responsive-slideshow">
                     <div class="text">Music Ministry</div>
                   </div>
                   <div class="mySlides ">
                     <div class="numbertext">11 / 22</div>
-                    <img src="assets/images/Praise Dancers/20190930_141238_2.jpg" style="width:100%;" class="responsive-slideshow">
+                    <img src="assets/images/Praise Dancers/20190930_141238_2.jpg" style="width:100%;"
+                      class="responsive-slideshow">
                     <div class="text">Praise Dancers</div>
                   </div>
                   <div class="mySlides ">
@@ -259,7 +272,8 @@
                   </div>
                   <div class="mySlides ">
                     <div class="numbertext">19 / 22</div>
-                    <img src="assets/images/Tea Ministry/20191020_145512_2.jpg" style="width:100%;" class="responsive-slideshow">
+                    <img src="assets/images/Tea Ministry/20191020_145512_2.jpg" style="width:100%;"
+                      class="responsive-slideshow">
                     <div class="text">Tea Ministry </div>
                   </div>
                   <div class="mySlides ">
@@ -275,7 +289,8 @@
                   </div>
                   <div class="mySlides ">
                     <div class="numbertext">22 / 22</div>
-                    <img src="assets/images/Usher Youth/Usher Youth Girls.jpg" style="width:100%;" class="responsive-slideshow">
+                    <img src="assets/images/Usher Youth/Usher Youth Girls.jpg" style="width:100%;"
+                      class="responsive-slideshow">
                     <div class="text">Usher Youth Girls</div>
                   </div>
                   <!-- <div class="mySlides ">
