new files to upload to website

--- a/serve2.html
+++ b/serve2.html
@@ -127,7 +127,7 @@
 
         <div id="serve-2" style="background-color: #e9f1f162">
             <div class=".container">
-                <div class=""> &nbsp;</div>
+                <div class="row"> &nbsp;</div>
                 <!-- <div class="row" style="margin-left: 3px;">  -->
                 <div class="row">
                     <div class="col">
@@ -481,9 +481,9 @@
                                     The Youth Experience Children’s Choir
                                 </h4>
                                 <p class="card-text">
-                                    Launched by Kim Banks and Benjamin Boamah and directed by
-                                    Jasmine Smart, this choir that brings the youth of the
-                                    church to sing God’s praises in a more modern way.
+                                    The Youth Experience and Choir was launched by the Kimberly Banks, 
+                                    Roy Banks, Lanell Newton, Benjamin Boamah and directed by Jasmine Smart.  Their 
+                                    mission is to uplift and build our youth to praise God without limits.
                                 </p>
                             </div>
                         </div>
