changes to stylesheet

--- a/serve.html
+++ b/serve.html
@@ -116,7 +116,7 @@
                 <div class="row">
                     <!-- <div class="col-md-12"> -->
                     <div class="col">
-                        <img src="assets/images/Choir/20191013_214935_resized[2].jpg" width="960px"
+                        <img src="assets/images/Choir/20191013_214935_resized[2].jpg" width="930px"
                             style="height: 100%;" class="largePic-responsive" />
 
                         <!-- <h1 id="serve-h1" style="color: white;margin-left:8px">Join A Ministry</h1> -->
@@ -481,7 +481,7 @@
                                     The Youth Experience Children’s Choir
                                 </h4>
                                 <p class="card-text">
-                                    The Youth Experience and Choir was launched by the Kimberly Banks, 
+                                    The Youth Experience and Choir was launched by Kimberly Banks, 
                                     Roy Banks, Lanell Newton, Benjamin Boamah and directed by Jasmine Smart.  Their 
                                     mission is to uplift and build our youth to praise God without limits.
                                 </p>
