--- a/serve2.html
+++ b/serve2.html
@@ -52,7 +52,7 @@
         <div id="top">
             <div class="row row-no-gutters">
                 <!-- <div class="col-xs-1 col-sm-4 col-lg-6  "> -->
-                <div class="col-md ">
+                <div class="col-sm ">
 
                     <div id="logo">
                         <img src="assets/images/moWordLogo.png" alt="mtolivebaptistchurch.net" srcset="" width="378"
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <!-- <div class="col-xs-11 col-sm-8 col-lg-6   "> -->
-                <div class="col-md">
+                <div class="col-sm">
 
                     <div id="prayer-request">
                         <!--<i class="fas fa-pray" style="color:#f37521"></i>
@@ -116,7 +116,7 @@
                 <div class="row">
                     <!-- <div class="col-md-12"> -->
                     <div class="col">
-                        <img src="assets/images/Choir/20191013_214935_resized[2].jpg" width="960px"
+                        <img src="assets/images/Choir/20191013_214935_resized[2].jpg" width="930px"
                             style="height: 100%;" class="largePic-responsive" />
 
                         <!-- <h1 id="serve-h1" style="color: white;margin-left:8px">Join A Ministry</h1> -->
