--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <!-- 
     <link rel="stylesheet" href="assets/css/reset.css" />
     -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css?v=6.1" />
     <link rel="stylesheet" href="assets/css/serve.css" />
 
     <!------------------------------------------------------------------------------------------------------------------
@@ -48,7 +48,7 @@
 
 
 <body>
-  <div id="container">
+  <div class="container">
 
   <div id="top">
       <div class="row row-no-gutters">
@@ -239,7 +239,7 @@
           <div id="foot-nav">
             <h5>Quick Links</h5>
             <div class="row">
-              <div class="col-md-4 ">
+              <div class="col-md ">
                 <div class="menu-footer-left-container lead">
                   <ul class="nav menu" id="menu-footer-left">
                     <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="index.html">Home</a>
@@ -251,7 +251,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-md-4 ">
+              <div class="col-md ">
                 <div class="menu-footer-right-container lead">
                   <ul class="nav menu" id="menu-footer-right">
                     <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="about.html">About</a>
@@ -277,7 +277,7 @@
           </div>
         </div>
       </div>
-    </div>
+  </div>
 
   <div id="prayer-window">
       <div id="" class="row">
