--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
     <!-- 
     <link rel="stylesheet" href="assets/css/reset.css" />
     -->
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/serve.css" />
+    <link rel="stylesheet" href="assets/css/style.css?v=6.1" />
+    <link rel="stylesheet" href="assets/css/serve2.css" />
 
     <!------------------------------------------------------------------------------------------------------------------
 ----  This group must stay in this order
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-  <div id="container">
+  <div class="container">
 
     <div id="top">
       <div class="row row-no-gutters">
@@ -111,7 +111,7 @@
               </div>
           </div>
       </div>
-  </div>
+    </div>
 
     <div id="div1" class="alert alert-dismissible alert-light">
       <div class=".container-fluid">
@@ -127,7 +127,7 @@
         <div class="row">
           <div class="col-sm-8">
             <div id="vision">
-              <p class="" style="text-align: justify;"> To be a church of Christ-like commitment, Christ-like
+              <p class="" > To be a church of Christ-like commitment, Christ-like
                 compassion, and
                 Christ-like character.</p>
               <h5 class="text-success" style="text-align: center;">Purpose Statement</h5>
@@ -207,7 +207,7 @@
 
 
 
-                “Ephesians 4:1 -3 which states (1)….I urge you to live a life worthy of the calling you have received.
+                <em><strong>“Ephesians 4:1 -3</strong></em> which states (1)….<em>"I urge you to live a life worthy of the calling you have received".</em>
                 (2)
                 Be
                 completely humble and gentle; be patient bearing with one another in love. (3) Make every effort to
@@ -256,15 +256,15 @@
             <div>
               <h1 class="display-5 info"> The Four Spiritual Laws </h1> <br>
               <ol>
-                <li>God loves you and offers a wonderful plan for your life. <em>(John 3:16, John 10:10)</em></li><br>
+                <li>God loves you and offers a wonderful plan for your life. <em><strong>(John 3:16, John 10:10)</strong></em></li><br>
                 <li>Man is sinful and separated from God. Therefore, he cannot know and experience God`s
-                  love and plan for his life. <em> (Romans 3:23)</em></li><br>
+                  love and plan for his life. <em><strong> (Romans 3:23)</strong></em></li><br>
                 <li>Jesus Christ is God`s only provision for man`s sin. Through Him you can know and experience God`s
                   love
-                  and plan for your life. <em>(Romans 5:8)</em></li><br>
+                  and plan for your life. <em><strong>(Romans 5:8)</strong></em></li><br>
                 <li>We must individually receive Jesus Christ as Savior and Lord; then we can know and experience God`s
                   love
-                  and plan for our lives. <em>(John 1:12)</em></li>
+                  and plan for our lives. <em><strong>(John 1:12)</strong></em></li>
               </ol>
             </div>
           </div>
@@ -277,79 +277,76 @@
 
 
 
-      <div id="footer">
-        <div class="row">
-          <div class="col-md-3">
-            <div id="logo">
-              <img src="assets/images/moWordLogo.png" alt="Mt. Olive Baptist Churchs" width="210" class="responsive" />
-            </div>
-            <div id="social-media">
-              <a href="https://www.facebook.com/pcmtolivebaptist" target="_blank"><img src="assets/images/fb.png"
-                  alt="facebook" srcset="" width="30px" /></a>
-              <!-- <img src="assets/images/twitter.png" alt="twitter" width="30px" srcset="" />
+    <div id="footer">
+      <div class="row">
+        <div class="col-md-3">
+          <div id="logo">
+            <img src="assets/images/moWordLogo.png" alt="Mt. Olive Baptist Churchs" width="210" class="responsive" />
+          </div>
+          <div id="social-media">
+            <a href="https://www.facebook.com/pcmtolivebaptist" target="_blank"><img src="assets/images/fb.png" alt="facebook" srcset="" width="30px" /></a>
+            <!-- <img src="assets/images/twitter.png" alt="twitter" width="30px" srcset="" />
             <img src="assets/images/instagram.png" alt="instagram" srcset="" width="30px" /> -->
-            </div>
           </div>
-          <div class="col-md-3 ">
-            <div id="foot-nav">
-              <h5>Our Vision </h5>
-              To be a church of Christ-like commitment, Christ-like compassion, and Christ-like character.
-            </div>
+        </div>
+        <div class="col-md-3 ">
+          <div id="foot-nav">
+            <h5>Our Vision  </h5>
+            To be a church of Christ-like commitment, Christ-like compassion, and Christ-like character.
           </div>
-          <div class="col-md-3 col-sm-6 col-xs-2">
-            <div id="foot-nav" class="lead">
-              <h5>Contact Us</h5>
-              604 W Ball St, Plant City, FL 33563
-              <br />
-              Phone: (813)754-3834 <br />Email: <a href="mailto:info@mtolivebaptistchurch.net"
-                target="_top">info@mtolivebaptistchurch.net</a>
-              <br />
-            </div>
+        </div>
+        <div class="col-md-3 col-sm-6 col-xs-2">
+          <div id="foot-nav" class="lead">
+            <h5>Contact Us</h5>
+            604 W Ball St, Plant City, FL 33563
+            <br />
+            Phone: (813)754-3834 <br />Email: <a href="mailto:info@mtolivebaptistchurch.net" target="_top">info@mtolivebaptistchurch.net</a>
+            <br />
           </div>
-          <div class="col-md-3 ">
-            <div id="foot-nav">
-              <h5>Quick Links</h5>
-              <div class="row">
-                <div class="col-md-4 ">
-                  <div class="menu-footer-left-container lead">
-                    <ul class="nav menu" id="menu-footer-left">
-                      <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="index.html">Home</a>
-                      </li>
-                      <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="contact.html">Contact
-                          Us</a></li>
-                      <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="watch.html">Watch</a>
-                      </li>
-                    </ul>
-                  </div>
+        </div>
+        <div class="col-md-3 ">
+          <div id="foot-nav">
+            <h5>Quick Links</h5>
+            <div class="row">
+              <div class="col-md ">
+                <div class="menu-footer-left-container lead">
+                  <ul class="nav menu" id="menu-footer-left">
+                    <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="index.html">Home</a>
+                    </li>
+                    <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="contact.html">Contact
+                        Us</a></li>
+                    <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="watch.html">Watch</a>
+                    </li>
+                  </ul>
                 </div>
-                <div class="col-md-4 ">
-                  <div class="menu-footer-right-container lead">
-                    <ul class="nav menu" id="menu-footer-right">
-                      <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="about.html">About</a>
-                      </li>
-                      <li><a class="nav-link menu-link disabled" style="font-size:15px;color:white"
-                          href="give.html">Give</a>
-                      </li>
-                      <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="serve.html">Serve</a>
-                      </li>
-                    </ul>
-                  </div>
+              </div>
+              <div class="col-md ">
+                <div class="menu-footer-right-container lead">
+                  <ul class="nav menu" id="menu-footer-right">
+                    <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="about.html">About</a>
+                    </li>
+                    <li><a class="nav-link menu-link disabled" style="font-size:15px;color:white" href="give.html">Give</a>
+                    </li>
+                    <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="serve.html">Serve</a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="row">
-          <div class="col-md-12">
-            <div id="">
-              <br>
-              <p class="footer-p" style="text-align: center;font-size:10px;color:#ededed;">&copy; 2020
-                mtolivebaptistchurch.net</p>
-            </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div id="">
+            <br>
+            <p class="footer-p" style="text-align: center;font-size:10px;color:#ededed;">&copy; 2020
+              mtolivebaptistchurch.net</p>
           </div>
         </div>
       </div>
+  </div>
 
     <div id="prayer-window">
         <div id="" class="row">
@@ -394,7 +391,7 @@
         </div>
     </div>
 
-    </div>
+  </div>
     <script src="assets/javascript/script.js"></script>
 </body>
 
