Sean added latest video on 9/21/20

--- a/watch2.html
+++ b/watch2.html
@@ -137,15 +137,15 @@
       </div>
       <div class="row">
         <div class="col-md-8">
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/281300859891889/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/632011301017297/">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/281300859891889/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/632011301017297/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/281300859891889/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/632011301017297/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/281300859891889/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/632011301017297/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -153,21 +153,22 @@
         </div>
         <div class="col-md-4">
           <h4>Latest Video</h4>
-          <h5>"I’ve Got A Praise"</h5>
-          <p>Dated 6/28/20</p>
+          <h5>"The Elements Of A Stable Life"</h5>
+          <p>Dated 9/13/20</p>
         </div>
       </div>
+      <br>
       <div class="row">
         <div class="col-md-8">
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/584117592293450/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/632011301017297/">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/584117592293450/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/632011301017297/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/584117592293450/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/632011301017297/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/584117592293450/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/632011301017297/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -175,8 +176,8 @@
         </div>
         <div class="col-md-4">
           <h4></h4>
-          <h5>"A Charge to Keep"</h5>
-          <p>Dated 6/21/20</p>
+          <h5>"The Elements Of A Stable Life"</h5>
+          <p>Dated 9/13/20</p>
         </div>
       </div>
       
