added givelify button

--- a/test.html
+++ b/test.html
@@ -83,5 +83,7 @@
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </p>
 </div>
+
+<a target='_blank' href='https://www.givelify.com/givenow/1.0/?token=eyJvcmdfaWQiOiJOamd5TlRNfiIsImJhZGdlX2ltYWdlIjoiYjMucG5nIn0~' ><img src='https://www.givelify.com/givenow/widget/badge/b3.png' alt='Givelify' /></a>
 </body>
 </html>
