--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
                           <a class="nav-link active " href="contact.html">Contact Us</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link disabled" href="give.html">Give</a>
+                          <a class="nav-link" href="give.html">Give</a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link " href="watch.html">Watch</a>
@@ -256,7 +256,7 @@
                   <ul class="nav menu" id="menu-footer-right">
                     <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="about.html">About</a>
                     </li>
-                    <li><a class="nav-link menu-link disabled" style="font-size:15px;color:white" href="give.html">Give</a>
+                    <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="give.html">Give</a>
                     </li>
                     <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="serve.html">Serve</a>
                     </li>
