--- a/give.html
+++ b/give.html
@@ -140,16 +140,17 @@
         <div class="jumbotron" style="background-color:#f5f3f020">
           <h1 class="display-5 info" style="color:rgb(206, 145, 39)">Ways To Give</h1><br><br>
           <div class="row">
-            <div class="col-md-3 col-sm-3 col-xs-3 info" style="font-size:18px;color:rgb(230, 190, 104)">
+            <div class="col-md-4 col-sm-4 col-xs-4 info" style="font-size:18px;color:rgb(230, 190, 104)">
               <i class="fas fa-laptop fa-5x" style="color:rgb(230, 190, 104)"></i><br><br>
-              <h4>Give Online</h4>
-              <p>It's safe and secure</p>
+              <h4>Give Online With Givelify</h4>
+              <p>It's safe and secure!</p>
+              <a href="https://www.givelify.com/givenow/1.0/?token=eyJvcmdfaWQiOiJOamd5TlRNfiIsImJhZGdlX2ltYWdlIjoiYjMucG5nIn0">
               <button class="btn"
                 style="color:rgb(206, 145, 39);border:3px double rgb(255, 210, 85);font-weight:bold;font-size:13px">
                 Give Now
-              </button> <br>
+              </button> </a><br>
             </div>
-            <div class="col-md-3 col-sm-3 col-xs-3 info" style="font-size:18px;color:rgb(230, 190, 104)">
+            <!-- <div class="col-md-3 col-sm-3 col-xs-3 info" style="font-size:18px;color:rgb(230, 190, 104)">
               <i class="fas fa-mobile-alt fa-5x" style="color:rgb(230, 190, 104)"></i><br><br>
               <h4>Text To Give</h4>
               <p>A fast and secure way to give through a simple text message</p>
@@ -157,17 +158,20 @@
                 style="color:rgb(206, 145, 39);border:3px double rgb(255, 210, 85);font-weight:bold;font-size:13px">
                 Learn More
               </button>
-            </div>
-            <div class="col-md-3 col-sm-3 col-xs-3 info" style="font-size:18px;color:rgb(230, 190, 104)">
+            </div> -->
+            <div class="col-md-4 col-sm-4 col-xs-4 info" style="font-size:18px;color:rgb(230, 190, 104)">
               <i class="fas fa-envelope fa-5x" style="color:rgb(230, 190, 104)"></i><br><br>
               <h4>Mail It In</h4>
-              <p>Mail in your gift to the below address</p>
+              <p>Mail in your gift to <br>
+                 604 W Ball St. <br>
+                  Plant City, FL 33563</p>
 
             </div>
-            <div class="col-md-3 col-sm-3 col-xs-3 info" style="font-size:18px;color:rgb(230, 190, 104)">
+            <div class="col-md-4 col-sm-4 col-xs-4 info" style="font-size:18px;color:rgb(230, 190, 104)">
               <i class="far fa-calendar-alt fa-5x" style="color:#d19c3e"></i><br><br>
               <h4>Give On Sunday</h4>
-              <p>Simply put in collection plate</p>
+              <p style="text-align: left;">Simply put in collection <br>
+                plate</p>
 
             </div>
           </div>
