--- a/serve.html
+++ b/serve.html
@@ -98,7 +98,7 @@
                                 <a class="nav-link " href="contact.html">Contact Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" href="give.html">Give</a>
+                                <a class="nav-link" href="give.html">Give</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link " href="watch.html">Watch</a>
@@ -549,7 +549,7 @@
                         <ul class="nav menu" id="menu-footer-right">
                           <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="about.html">About</a>
                           </li>
-                          <li><a class="nav-link menu-link disabled" style="font-size:15px;color:white" href="give.html">Give</a>
+                          <li><a class="nav-link menu-link " style="font-size:15px;color:white" href="give.html">Give</a>
                           </li>
                           <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="serve.html">Serve</a>
                           </li>
