added new videos and food pantry event

--- a/watch.html
+++ b/watch.html
@@ -137,15 +137,15 @@
       </div>
       <div class="row">
         <div class="col-md-8">
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/801495607318503/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/694591191460643/">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/801495607318503/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/694591191460643/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/801495607318503/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/694591191460643/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/801495607318503/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/694591191460643/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -153,22 +153,22 @@
         </div>
         <div class="col-md-4">
           <h4>Latest Video</h4>
-          <h5>"Affirmation Of The Believer"</h5>
-          <p>Dated 9/27/20</p>
+          <h5>"Do What GOD Told You To Do"</h5>
+          <p>Dated 11/1/20</p>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-8">
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/331641457945958/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/443490936627772/">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/331641457945958/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/443490936627772/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/331641457945958/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/443490936627772/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/331641457945958/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/443490936627772/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -176,8 +176,8 @@
         </div>
         <div class="col-md-4">
           <h4></h4>
-          <h5>"They That Worship"</h5>
-          <p>Dated 9/20/20</p>
+          <h5>"God`s Changing Power- Part 3"</h5>
+          <p>Dated 10/25/20</p>
         </div>
       </div>
       
