change background color

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </div>
       </div>
 
-      <div id="home-p2" style=" background-color: #e9e6e6; ">
+      <div id="home-p2" style=" background-color: #faf6f6; ">
         <div class=".container">
             <div class="row"> &nbsp;</div>
         <div class="row">
