updated feeding ministry

--- a/serve.html
+++ b/serve.html
@@ -469,12 +469,14 @@
                             <!-- <div class="card-header">Header</div> -->
                             <div class="card-body">
                                 <h4 class="card-title">Feeding Ministry</h4>
+                                
                                 <p class="card-text">
-                                    This ministry is brought to us in part by Metropolitan
-                                    Ministry Food Bank. Here, Ted Taylor feeds the community
-                                    with the word of the Lord and Anne-Mae Woodard feeds them
-                                    with food, so no one is left without an empty stomach nor
-                                    soul, from the hours of 12pm-1pm every Tuesday and Thursday.
+                                    <strong>Our Mission: His Heart Our Hands</strong><br>
+                                    The bible teaches that saving faith is best communicated through the 
+                                    avenue of genuuine compassion and a spirit of Christ like servanthood.
+                                    <em><strong>John 13: 12-17</strong></em><br>
+                                    The bible teaches that christians should share resources especially with those who 
+                                    are in need. <em><strong>Matthew 12: 43:44</strong></em>
                                 </p>
                             </div>
                         </div>
