added Aunt Beryl's announcement

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- 
         <link rel="stylesheet" href="assets/css/reset.css" />
         -->
-  <link rel="stylesheet" href="assets/css/style.css?v=9.1" />
+  <link rel="stylesheet" href="assets/css/style.css?v=10.1" />
   <link rel="stylesheet" href="assets/css/serve.css" />
 
   <!------------------------------------------------------------------------------------------------------------------
@@ -185,20 +185,27 @@
             <h1 class="display-5 info">Upcoming Events</h1>
             <br>
             <!-- <hr class="my-4"> -->
-
+            <h3 class="info">COVID-19 Vaccination At Mount Olive Baptist Church</h3>
+            <p><small>
+                Hillsborough County will be providing a mobile vaccination center on <strong>Thursday, May 20th 2021, from 10am -
+                6pm</strong> in the parking lot of the church. This is presented by the Wellness Ministry. NO APPOINTMENT
+                NECESSARY. All are welcome.
+              </small></p>
+            <hr class="my-4">
             <h3 class="info">Food Pantry & USDA Food Distribution</h3>
             <p class="lead info" style="text-align: center">
               Mondays - 12:30pm <br>
               Tuesdays - 10:00am<br>
               3rd Thursdays - 10:00am<br>
-            </p> 
-            <p ><small>In accordance with Federal law and U.S. Department of Agriculture policy, this institution is prohibited
-              from discriminating on the basis of race, color, national origin, sex, age, or disability. To file a
-              complaint of discrimination, write USDA, Director, Office of Civil Rights, 1400 Independence Avenue, SW,
-              Washington, D.c., 20250-9410 or call (800)795-3272 (voice) or (202)720-6383 (TTY).</small></p>
+            </p>
+            <p><small>In accordance with Federal law and U.S. Department of Agriculture policy, this institution is
+                prohibited
+                from discriminating on the basis of race, color, national origin, sex, age, or disability. To file a
+                complaint of discrimination, write USDA, Director, Office of Civil Rights, 1400 Independence Avenue, SW,
+                Washington, D.c., 20250-9410 or call (800)795-3272 (voice) or (202)720-6383 (TTY).</small></p>
             <hr class="my-4">
-            
-          
+
+
 
           </div>
 
