added latest videos

--- a/watch.html
+++ b/watch.html
@@ -127,9 +127,9 @@
         <div class="col">
           <div class="alert alert-danger alert-info">
             <!-- <button type="button" class="close" data-dismiss="alert">&times;</button> -->
-            <strong>Due to COVID-19 and the recommendation of the CDC with regards to Social Distancing, and the state
-              of Florida, we will be meeting completely online.
-              Join us this Sunday at 10AM, on our Facebook Live page for our live stream.</strong> <br><br>
+            <!-- <strong>Due to COVID-19 and the recommendation of the CDC with regards to Social Distancing, and the state
+              of Florida, we will be meeting completely online. -->
+              <strong>Join us this Sunday at 10AM, on our Facebook Live page for our live stream.</strong> <br><br>
             <a href="https://www.facebook.com/pcmtolivebaptist"> <button id="joinFB">Join Our Sunday Live Stream Via
                 Facebook</button></a>
           </div>
@@ -137,15 +137,15 @@
       </div>
       <div class="row">
         <div class="col-md-8">
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/4102493999815587/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/1078801565860839/">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/4102493999815587/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/1078801565860839/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/4102493999815587/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/1078801565860839/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/4102493999815587/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/1078801565860839/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -153,22 +153,22 @@
         </div>
         <div class="col-md-4">
           <h4>Latest Video</h4>
-          <h5>"Looking In The Mirror"</h5>
-          <p>Dated 5/16/21</p>
+          <h5>"Triumph In Christ"</h5>
+          <p>Dated 7/04/21</p>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-8">
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/213123000339560/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/246484727284517/">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/213123000339560/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/246484727284517/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/213123000339560/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/246484727284517/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/213123000339560/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/246484727284517/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -176,8 +176,8 @@
         </div>
         <div class="col-md-4">
           <h4></h4>
-          <h5>"A Mother`s Ministry"</h5>
-          <p>Dated 5/9/21</p>
+          <h5>"Single and Blessed"</h5>
+          <p>Dated 6/27/21</p>
         </div>
       </div>
       <br>
